added java configuration